novos campos e sobre

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="save">SALVAR</string>
     <string name="cancel">CANCELAR</string>
+    <string-array name="tipo_valores">
+        <item>Doença</item>
+        <item>Foco</item>
+    </string-array>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
